welcome.lessons.welcome.array.has271.Has271.scala.error
has271:3: error: Boolean does not take parameters
    if (((nums(i)+5)==(nums(i+1))) && ((nums(i)-1==nums(i+2)) || (nums(i)-2==nums(i+2)) (nums(i)==nums(i+2)) || ((nums(i)+1)==nums(i+2)))) {
                                                                                        ^